fix: text-align, var definitaion + var name

--- a/Homework/B-Ilya/Homework 14/style.scss
+++ b/Homework/B-Ilya/Homework 14/style.scss
@@ -18,7 +18,6 @@ body {
 header {
     display: flex;
     justify-content: center;
-    align-items: center;
     text-align: center;
 
     > div {
